--- a/benchmarkingLGAGTFS.bib
+++ b/benchmarkingLGAGTFS.bib
@@ -52,3 +52,73 @@
 	url = {http://www.trb.org/Main/Blurbs/169437.aspx},
 	year = {2013},
 	bdsk-url-1 = {http://www.trb.org/Main/Blurbs/169437.aspx}}
+	
+	
+@Manual{GTFS,
+  title = {General Transit Feed Specification (GTFS)},
+  author = {{MobilityData}},
+  year = {undated},
+  url = {https://gtfs.org/},
+}
+
+
+@inproceedings{Reynolds:2017ah,
+	abstract = {There is wide agreement that prioritising on-road public transport services is beneficial, but considerable uncertainty about how best to implement priority measures in practice. As yet it is unclear why some transit priority schemes receive political, institutional and public support while others are blocked, cancelled or compromised, often for non-technical reasons. This paper explores how public policy analysis concepts can be adapted to describe and potentially improve transit priority implementation. Previous evaluation approaches have focused on the traffic, mobility and economic impacts of transit priority measures. What has been missing is a consideration of how politics, institutional arrangements and other non-rational factors influence priority implementation. This paper describes the major forms of policy analysis (rationalism, institutionalism, incrementalism, political approaches and the `garbage can' model) and uses each to develop new conceptual models of priority implementation. Institutional and top-down models emphasise the government's control over the road and transit system. They suggest that better policies and centralisation of decision-making might improve priority implementation. In contrast, bottom-up implementation theories and what is termed the `garbage can' model emphasise the influence of street-level actors and project team members. These suggest that understanding the drivers of individuals' opinions, strategies and decision-making is necessary to improve implementation and outcomes. Incrementalism based models, on the other hand, suggest using a series of small changes to gradually increase the level of transit priority over time instead of a large, and potentially controversial, single step. This paper provides an initial move beyond the prevailing `techno-rationalist' approaches to transit priority implementation. It concludes with a description of opportunities for future research to test these new models and to explore the political, institutional and other factors influencing transit priority implementation},
+	address = {Auckland, New Zealand},
+	author = {Reynolds, James and Currie, Graham and Rose, Geoff and Cumming, Alistair},
+	booktitle = {Australasian Transport Research Forum 2017},
+	date = {November 27 to 29, 2017},
+	date-added = {2023-01-08 14:01:53 +1100},
+	date-modified = {2023-01-08 14:02:01 +1100},
+	id = {930},
+	title = {Moving beyond techno-rationalism: new models of transit priority implementation},
+	year = {2017}}
+
+
+@techreport{Ryus:2003aa,
+	author = {Ryus, Paul and Connor, M and Corbett, S and Rodenstein, A and Wargelin, L and Ferreira, L and Nakanishi, Y and Blume, K},
+	date-added = {2023-01-08 14:01:53 +1100},
+	date-modified = {2023-01-08 14:02:02 +1100},
+	id = {774},
+	series = {Transit Cooperative Research Program},
+	st = {TCRP report 88: a guidebook for developing a transit performance-measurement system},
+	title = {TCRP report 88: a guidebook for developing a transit performance-measurement system},
+	year = {2003}}
+
+
+@misc{Florida-Transit-Information-System:2018aa,
+	author = {{Florida Transit Information System}},
+	date-added = {2023-01-08 14:01:53 +1100},
+	date-modified = {2023-06-30 09:01:59 +1000},
+	id = {1374},
+	number = {September 12},
+	st = {Urban integrated national transit database},
+	title = {Urban integrated national transit database},
+	url = {http://www.ftis.org/urban_intd.aspx},
+	volume = {2018},
+	year = {2018},
+	bdsk-url-1 = {http://www.ftis.org/urban_intd.aspx}}
+
+
+@webpage{UITP:2015aa,
+	address = {Brussels, Belgium},
+	author = {{International Association of Public Transport (UITP)}},
+	date-added = {2023-01-08 14:01:53 +1100},
+	date-modified = {2023-06-30 09:06:51 +1000},
+	id = {1173},
+	st = {Mobility in cities database 2015},
+	title = {Mobility in cities database 2015},
+	url = {uitp.org/publications/mobility-in-cities-database/},
+	year = {2015}}
+
+
+
+@electronic{Imperial-College-London:2023aa,
+	author = {{Imperial College London}},
+	date-added = {2023-06-30 09:11:27 +1000},
+	date-modified = {2023-06-30 09:12:55 +1000},
+	lastchecked = {June 30, 2023},
+	title = {Transport Strategy Centre (TSC); Applied Research},
+	url = {https://www.imperial.ac.uk/transport-engineering/transport-strategy-centre/applied-research/},
+	year = {undated}}
+
