--- a/Reynolds_Currie_2024_transit_supply_index_GTFS.tex
+++ b/Reynolds_Currie_2024_transit_supply_index_GTFS.tex
@@ -20,8 +20,8 @@
 
 % Put here what will go to headers as author
 \AuthorHeaders{Reynolds and Currie}
-\title{Benchmarking transit service levels by Local Government Areas
-using GTFS feeds}
+\title{Leveraging GTFS data to calculate an open-source Transit Supply
+Index}
 
 % TODO: add macros for easier formatting of \author.
 \author{%
@@ -67,7 +67,7 @@ TBC.
 \hfill\break%
 \hfill\break%
 \noindent\textit{Keywords}:  Transit, Public
-transport, GTFS, Benchmarking, Local government,  
+transport, GTFS, Benchmarking,  
 \newpage
 
 \hypertarget{introduction}{%
@@ -254,7 +254,7 @@ Gregory Macfarlane created the \texttt{rticles} template in 2021.
 
 \newpage
 \renewcommand\refname{References}
-\bibliography{packages.bib,benchmarkingLGAGTFS.bib}
+\bibliography{packages.bib,References.bib}
 
 
 \end{document}
