--- a/packages.bib
+++ b/packages.bib
@@ -18,7 +18,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2023},
+  year = {2022},
   url = {https://www.R-project.org/},
 }
 
@@ -150,14 +150,6 @@
   url = {https://CRAN.R-project.org/package=readr},
 }
 
-@Manual{R-rticles,
-  title = {rticles: Article Formats for R Markdown},
-  author = {JJ Allaire and Yihui Xie and Christophe Dervieux and {R Foundation} and Hadley Wickham and {Journal of Statistical Software} and Ramnath  Vaidyanathan and {Association for Computing Machinery} and Carl Boettiger and {Elsevier} and Karl Broman and Kirill Mueller and Bastiaan Quast and Randall  Pruim and Ben Marwick and Charlotte Wickham and Oliver Keyes and Miao Yu and Daniel Emaasit and Thierry Onkelinx and Alessandro Gasparini and Marc-Andre Desautels and Dominik Leutnant and {MDPI} and {Taylor and Francis} and Oğuzhan Öğreden and Dalton Hance and Daniel Nüst and Petter Uvesten and Elio Campitelli and John Muschelli and Alex Hayes and Zhian N. Kamvar and Noam Ross and Robrecht Cannoodt and Duncan Luguern and David M. Kaplan and Sebastian Kreutzer and Shixiang Wang and Jay Hesselberth and Rob Hyndman},
-  year = {2022},
-  note = {R package version 0.24},
-  url = {https://github.com/rstudio/rticles},
-}
-
 @Manual{R-scales,
   title = {scales: Scale Functions for Visualization},
   author = {Hadley Wickham and Dana Seidel},
@@ -170,7 +162,7 @@
   title = {sf: Simple Features for R},
   author = {Edzer Pebesma},
   year = {2023},
-  note = {R package version 1.0-13},
+  note = {R package version 1.0-12},
   url = {https://CRAN.R-project.org/package=sf},
 }
 
@@ -178,7 +170,7 @@
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 1.6-1},
+  note = {R package version 1.6-0},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -210,7 +202,7 @@
   title = {tidytransit: Read, Validate, Analyze, and Map GTFS Feeds},
   author = {Flavio Poletti and Daniel Herszenhut and Mark Padgham and Tom Buckley and Danton Noriega-Goodwin},
   year = {2023},
-  note = {R package version 1.5.1},
+  note = {R package version 1.5.0},
   url = {https://github.com/r-transit/tidytransit},
 }
 
@@ -220,15 +212,6 @@
   year = {2023},
   note = {R package version 2.0.0},
   url = {https://CRAN.R-project.org/package=tidyverse},
-}
-
-@Manual{R-tinytex,
-  title = {tinytex: Helper Functions to Install and Maintain TeX Live, and Compile
-LaTeX Documents},
-  author = {Yihui Xie},
-  year = {2023},
-  note = {R package version 0.45},
-  url = {https://github.com/rstudio/tinytex},
 }
 
 @Manual{R-tufte,
@@ -335,7 +318,7 @@ LaTeX Documents},
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger Bivand},
+  author = {Edzer J. Pebesma and Roger S. Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
@@ -363,17 +346,6 @@ LaTeX Documents},
   number = {43},
   pages = {1686},
   doi = {10.21105/joss.01686},
-}
-
-@Article{tinytex2019,
-  title = {TinyTeX: A lightweight, cross-platform, and easy-to-maintain LaTeX distribution based on TeX Live},
-  author = {Yihui Xie},
-  journal = {TUGboat},
-  year = {2019},
-  volume = {40},
-  number = {1},
-  pages = {30--32},
-  url = {https://tug.org/TUGboat/Contents/contents40-1.html},
 }
 
 @Article{units2016,
