start on methodology

--- a/Reynolds_Currie_2024_transit_supply_index_GTFS.tex
+++ b/Reynolds_Currie_2024_transit_supply_index_GTFS.tex
@@ -146,22 +146,49 @@ Association of Public Transport (UITP) \citep{UITP:2015aa} have online
 databases, while the Transport Strategy Centre of Imperial College
 London runs extensive annual benchmarking programmes across over 100
 transit provides around the world
-\citep{Imperial-College-London:2023aa}.
+\citep{Imperial-College-London:2023aa}. The Fielding Triangle
+\citep{FieldingGordonJ1987Mpts} provides a framework for understanding
+how such metrics combine service inputs, service outputs and service
+consumption to describe cost efficiency, cost effectiveness or service
+effectiveness measures. At a larger scale, \citet{Litman:2003ab} and
+\citet{Litman:2016aa} discuss some of the traffic, mobility,
+accessibility, social equity, strategic planning and other rational
+decision-making frames that might underlie such transit metrics, while
+\citet{Reynolds:2017ah} extends this into models of how
+institutionalism, incrementalism and other public policy models might
+apply to decision-making processes. Further examples are provided by
+\citet{GuzmanLuisA.2017Aeit}, who develop a measure of accessibility in
+the context of policy development and social equity for Latin American
+Bus Rapid Transit (BRT) based networks, and the street space allocation
+metrics based around 10 ethical principles from
+\citet{Creutzig2020streetspaceallocation}.
 
-The TCQSM and Transit Score may provide contrasting examples: with
-respect to the first challenge, TCQSM metrics may require large amounts
-of network, service, population and other data to be assembled before
-the indicators can be calculated; whereas Transit Scores are readily
-available on the \citet{WalkScore:2023tg} website for locations with a
-published GTFS feed (eliminating the need for any calculations). With
-respect to the second challenge, the meaning of the Transit Score
-appears easy to explain (the closer to 100, the better), but as the
-score is calculated by a patented algorithm (effectively a black-box) it
-may not be easy to understand or explain the connection between
-real-world conditions and the score, or what might need to be done to
-improve the score and service levels. Nor does it appear to be possible
-for Transit Scores to be generated for proposed changes to networks. The
-TCQSM, in
+However, many of these metrics are difficult to calculate, complex to
+explain or understand, and likely not well suited to communication with
+those who are not transit planners or engineers, or otherwise technical
+specialists. However, where pre-calculated metrics are immediately
+available it may not be possible for generate metrics for proposed
+system changes or know exactly how scores are calculated. The TCQSM and
+Transit Score may provide contrasting examples: with respect to the
+first challenge, TCQSM metrics may require large amounts of network,
+service, population and other data to be assembled before the indicators
+can be calculated; whereas Transit Scores are readily available on the
+\citet{WalkScore:2023tg} website for locations with a published GTFS
+feed (eliminating the need for any calculations). With respect to the
+second challenge, the meaning of the Transit Score appears easy to
+explain (the closer to 100, the better), but as the score is calculated
+by a patented algorithm (effectively a black-box) it may not be easy to
+understand or explain the connection between real-world conditions and
+the score, or what might need to be done to improve the score and
+service levels. Nor does it appear to be possible for Transit Scores to
+be generated for proposed changes to networks. The TCQSM, in contrast is
+open-source, in that \citet{TCQSM:2013} provide a manual describing all
+the metrics and how to calculate them. However, the calculations
+themselves appear to be complex, which may be a barrier to use by
+practitioners, researchers, advocates or others who are not transit
+scheduling specialists. While \citet{Wong:2013aa}
+
+\url{https://github.com/transitland/transitland-processing-animation}
 
 \hypertarget{general-transit-feed-specification-gtfs}{%
 \subsection{General Transit Feed Specification
@@ -254,7 +281,7 @@ Gregory Macfarlane created the \texttt{rticles} template in 2021.
 
 \newpage
 \renewcommand\refname{References}
-\bibliography{packages.bib,References.bib}
+\bibliography{References.bib}
 
 
 \end{document}
