--- a/packages.bib
+++ b/packages.bib
@@ -18,7 +18,7 @@
   author = {{R Core Team}},
   organization = {R Foundation for Statistical Computing},
   address = {Vienna, Austria},
-  year = {2022},
+  year = {2023},
   url = {https://www.R-project.org/},
 }
 
@@ -162,7 +162,7 @@
   title = {sf: Simple Features for R},
   author = {Edzer Pebesma},
   year = {2023},
-  note = {R package version 1.0-12},
+  note = {R package version 1.0-13},
   url = {https://CRAN.R-project.org/package=sf},
 }
 
@@ -170,7 +170,7 @@
   title = {sp: Classes and Methods for Spatial Data},
   author = {Edzer Pebesma and Roger Bivand},
   year = {2023},
-  note = {R package version 1.6-0},
+  note = {R package version 1.6-1},
   url = {https://CRAN.R-project.org/package=sp},
 }
 
@@ -202,7 +202,7 @@
   title = {tidytransit: Read, Validate, Analyze, and Map GTFS Feeds},
   author = {Flavio Poletti and Daniel Herszenhut and Mark Padgham and Tom Buckley and Danton Noriega-Goodwin},
   year = {2023},
-  note = {R package version 1.5.0},
+  note = {R package version 1.5.1},
   url = {https://github.com/r-transit/tidytransit},
 }
 
@@ -318,7 +318,7 @@
 }
 
 @Article{sp2005,
-  author = {Edzer J. Pebesma and Roger S. Bivand},
+  author = {Edzer J. Pebesma and Roger Bivand},
   title = {Classes and methods for spatial data in {R}},
   journal = {R News},
   year = {2005},
